<resources>
    <string name="app_name_release">BingWallpaper</string>
    <string name="app_name_debug">bwd</string>

    <string name="show_src_bt">查看源码</string>

    <string name="manual_set_label">同步壁纸</string>

    <string name="wallpaper_source">选择壁纸来源</string>
    <string name="update_time">设置定时更新</string>
    <string name="every_day">每天</string>
    <string name="save_path">保存到相册</string>
    <string name="save_to_gallery_desc">保存到 Pictures/BingWallpaper</string>
    <string name="no_save">仅设置壁纸，不保存到相册</string>
    <string name="set_lock_screen">同时设置锁屏</string>
    <string name="bing_search">必应搜索</string>
    <string name="setup_now">立即设置</string>
    <string name="wallpaper_source_list">壁纸源列表</string>
    <string name="add_source">添加源</string>
    <string name="about">关于</string>
    <string name="see_source_code">查看源码</string>
    <string name="ok">好</string>
    <string name="hide_me">隐藏桌面图标</string>
    <string name="no_hide">不隐藏</string>
    <string name="show_manual">显示手动切换桌面图标</string>
    <string name="hide">隐藏</string>
    <string name="clear_wallpaper">清除壁纸</string>
    <string name="please_input_name">请输入名称(必须且不可重复)</string>
    <string name="please_input_url">请输入url</string>
    <string name="add">添加</string>
    <string name="please_input_desc">请输入描述(可选)</string>
    <string name="test">检测</string>
    <string name="add_source_doc">仅支持添加直链源, 名称随意但不可重复. 添加前请先检测, 检测结果会出现在下方, 出现壁纸图片即检测通过</string>
    <string name="sync_wallpaper">Sync Wallpaper</string>
    <string name="ignore_battery">申请忽略电池优化</string>
    <string name="add_timed">添加定时</string>
    <string name="clear_timed">清空定时</string>
    <string name="add_timed_desc">点击添加定时按钮, 可以添加定时任务</string>
    <string name="title_timed_list">设置定时任务</string>
    <string name="desc_ignore_battery_0">注意\n一些ROM对定时任务限制的很严格, 为了定时功的稳定, 请执行以下操作</string>
    <string name="desc_ignore_battery_1">1. 忽略电池优化, 点击下面按钮即可</string>
    <string name="desc_ignore_battery_2">2. 打开手机自带手机管家之类的软件, 在其中将本软件加入白名单</string>
    <string name="complete_ignore_battery">已完成忽略电池优化</string>
    <string name="no_timed">无定时任务</string>

    <string name="bing_market">必应地区</string>
    <string name="bing_market_default">跟随默认</string>
    <string name="bing_market_china">中国 zh-CN</string>
    <string name="bing_market_global">国际版 en-WW</string>
    <string name="bing_market_us">美国 en-US</string>
    <string name="bing_market_uk">英国 en-GB</string>
    <string name="bing_market_japan">日本 ja-JP</string>
    <string name="bing_market_custom">自定义...</string>
    <string name="bing_market_custom_value">自定义 %1$s</string>
    <string name="bing_market_custom_title">自定义必应地区</string>
    <string name="bing_market_custom_hint">例如 en-WW</string>
    <string name="bing_market_invalid">地区代码格式不正确</string>

    <string name="bing_resolution">图片分辨率</string>
    <string name="bing_resolution_uhd">UHD</string>
    <string name="bing_resolution_1920_1080">1920x1080</string>
    <string name="bing_resolution_1920_1200">1920x1200</string>
    <string name="bing_resolution_1366_768">1366x768</string>
    <string name="bing_resolution_1080_1920">1080x1920</string>
    <string name="bing_resolution_768_1366">768x1366</string>

    <string name="wallpaper_fit_mode">装配模式</string>
    <string name="wallpaper_fit_mode_system">系统默认</string>
    <string name="wallpaper_fit_mode_crop">裁剪填满</string>
    <string name="wallpaper_fit_mode_contain">完整显示</string>
    <string name="wallpaper_fit_mode_stretch">拉伸填满</string>

    <string name="show_toast">显示Toast</string>
    <string name="show_toast_desc">设置壁纸进度会有Toast提示</string>
    <string name="show_toast_desc2">设置壁纸进度不会有Toast提示</string>

    <string name="only_wifi">仅wifi下载</string>
    <string name="only_wifi_desc">仅wifi网络下载</string>
    <string name="only_wifi_desc2">所有网络均可下载</string>

</resources>
